# kattis

./: .gitignore  README.md
ameriskur.hs/: ameriskur.cabal
ameriskur.hs/src/: Main.hs
anotherbrick.hs/: anotherbrick.cabal
anotherbrick.hs/src/: Main.hs
countthevowels.hs/: countthevowels.cabal  stack.yaml
countthevowels.hs/src/: Main.hs
euclidsalgorithm.hs/: euclidsalgorithm.cabal
euclidsalgorithm.hs/src/: Main.hs
eulersnumber.hs/: eulersnumber.cabal
eulersnumber.hs/src/: Main.hs
hello.hs/: hello.cabal
isyavowel.hs/: isyavowel.cabal
isyavowel.hs/src/: Main.hs
reduplication.hs/: reduplication.cabal
reduplication.hs/src/: Main.hs
server.hs/: server.cabal
server.hs/src/: Main.hs
skak.hs/: skak.cabal
skak.hs/src/: Main.hs
takkar.hs/: takkar.cabal
takkar.hs/src/: Main.hs
telja.hs/: telja.cabal
telja.hs/src/: Main.hs
