cabal-version:       2.2

name:                euclidsalgorithm
version:             0.1.0
author:              Steffan Sølvsten
category:            Programming Exercise
build-type:          Simple

executable euclidsalgorithm
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
  ghc-options:         -Wall
                       -Wcompat
                       -Widentities
                       -Wincomplete-record-updates
                       -Wincomplete-uni-patterns
                       -Wmissing-export-lists
                       -Wmissing-home-modules
                       -Wpartial-fields
                       -Wredundant-constraints
